# SportPassportCSVConverter

./: .gitignore  PACKAGING.md  README.md  build-executable.sh  build-package.sh  build-x64-docker.sh  convert.sh  convert_interactive.sh  converter_interactive.py  members-example-no-headers.a669fec7da31cd717c2b.csv  pyi_rth_loading.py  pyproject.toml  requirements.txt  setup.py  sport-passport-converter.spec
converter/: __init__.py  __main__.py  banners.py  column_variations.py  corrector.py  interactive.py  main.py  row_detector.py  schema.py  validator.py
tests/: __init__.py  conftest.py  test_column_validation.py  test_column_variations.py  test_corrector.py  test_integration.py  test_interactive.py  test_interactive_executable.py  test_row_detector.py  test_row_removal_integration.py  test_schema.py  test_validator.py
tests/fixtures/: __init__.py  test_data_comma_issue.csv  test_data_missing_mandatory.csv  test_data_missing_optional.csv  test_data_valid.csv  test_data_with_errors.csv  test_data_with_extra_rows.csv
