[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sport-passport-csv-converter"
version = "1.0.0"
description = "A command-line utility to convert Excel spreadsheets into compliant CSV format for Sport Passport import"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Sport Passport CSV Converter Team"}
]
keywords = ["csv", "excel", "converter", "sport-passport", "data-conversion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Utilities",
]

dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
sport-passport-converter = "converter.main:main"
sp-converter = "converter.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/SportPassportCSVConverter"
Repository = "https://github.com/yourusername/SportPassportCSVConverter"
Issues = "https://github.com/yourusername/SportPassportCSVConverter/issues"

[tool.setuptools]
packages = ["converter"]

[tool.setuptools.package-data]
converter = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"
